[package]
name = "staging-node"
version = "4.0.0-dev"
description = "A fresh FRAME-based Matter node, ready for hacking."
authors = ["Matter DevHub <https://github.com/matter-developer-hub>"]
homepage = "https://matter.io/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/matter-developer-hub/matter-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "staging-node"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
futures-timer = "3.0.1"
jsonrpsee = { version = "0.16.2", features = ["server"] }

sc-cli = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sc-executor = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sc-network = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sc-service = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sc-telemetry = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sc-transaction-pool = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sc-transaction-pool-api = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sc-consensus = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sc-consensus-manual-seal = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sc-rpc-api = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sc-basic-authorship = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sc-offchain = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sc-client-api = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sp-timestamp = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sp-keyring = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sp-api = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sp-blockchain = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sp-block-builder = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }
sp-io = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }

matter-frame-rpc-system = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }

# Local Dependencies
runtime = { package = "staging-runtime", path = "../runtime" }
frame = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }

[build-dependencies]
matter-build-script-utils = { version = "3.0.0", git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api" }

[features]
default = []

