[package]
name = "staging-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.0.0", default-features = false }
scale-info = { version = "2.6.0", default-features = false }

frame = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api", default-features = false, features = ["runtime"] }
staging-barrels = { path = "../barrels", default-features = false }

# Barrels that we want to use
barrel-balances = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api", default-features = false, features = ["insecure_zero_ed"] }
barrel-sudo = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api", default-features = false }
barrel-timestamp = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api", default-features = false }
barrel-transaction-payment = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api", default-features = false }
barrel-transaction-payment-rpc-runtime-api = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api", default-features = false }

[build-dependencies]
matter-wasm-builder = { git = "https://github.com/bitzaldot/bitzal-sdk.git", branch = "kiz-frame-api", optional = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",

	"frame/std",
	"staging-barrels/std",

	"barrel-balances/std",
	"barrel-sudo/std",
	"barrel-timestamp/std",
	"barrel-transaction-payment/std",
	"barrel-transaction-payment-rpc-runtime-api/std",

	"matter-wasm-builder",
]


