[package]
name = "step-3-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
frame = { git = "https://github.com/bitzaldot/matter.git", branch = "kiz-frame-api", features = ["runtime"] }
barrels = { package = "step-3-barrels", path = "../barrels" }

# TODO: https://github.com/bitzaldot/matter/issues/14145
sp-api = { git = "https://github.com/bitzaldot/matter.git", branch = "kiz-frame-api", default-features = false }

# TODO: https://github.com/bitzaldot/matter/issues/14127
parity-scale-codec = { version = "3.0.0" }
scale-info = { version = "2.6.0" }

[features]
default = ["std"]
std = [
	"sp-api/std"
]
