[package]
name = "step-5-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
frame = { git = "https://github.com/bitzaldot/matter.git", branch = "kiz-frame-api", default-features = false, features = ["runtime"] }
barrels = { package = "step-5-barrels", path = "../barrels", default-features = false }

# TODO: https://github.com/bitzaldot/matter/issues/14145
sp-api = { git = "https://github.com/bitzaldot/matter.git", branch = "kiz-frame-api", default-features = false }

# TODO: https://github.com/bitzaldot/matter/issues/14127
frame-support = { git = "https://github.com/bitzaldot/matter.git", branch = "kiz-frame-api", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false }
scale-info = { version = "2.6.0", default-features = false }

[build-dependencies]
matter-wasm-builder = { git = "https://github.com/bitzaldot/matter.git", branch = "kiz-frame-api", optional = true }

[features]
default = ["std"]
std = [
	"barrels/std",
	"frame/std",

	"sp-api/std",

	"parity-scale-codec/std",
	"scale-info/std",

	"matter-wasm-builder",
]


